@@ -726,6 +726,15 @@
   doi		= {10.1007/978-3-540-73370-6_17}
 }
 
+@Misc{		  perez.19.hoa,
+  author	= {Guillermo A. P{\'{e}}rez},
+  title		= {The Extended {HOA} Format for Synthesis},
+  howpublished	= {ArXiv},
+  month		= {dec},
+  year		= {2019},
+  url		= {http://arxiv.org/abs/1912.05793}
+}
+
 @InProceedings{	  piterman.06.vmcai,
   author	= {Nir Piterman and Amir Pnueli and Yaniv Sa'ar},
   editor	= {E. Allen Emerson and Kedar S. Namjoshi"},
