@@ -1,5 +1,5 @@
 /* -*- coding: utf-8 -*-
-** Copyright (C) 2014-2018, 2020, 2021 Laboratoire de Recherche et Développement
+** Copyright (C) 2014-2018, 2020, 2021, 2022 Laboratoire de Recherche et Développement
 ** de l'Epita (LRDE).
 **
 ** This file is part of Spot, a model checking library.
@@ -145,6 +145,7 @@ identifier  [[:alpha:]_][[:alnum:]_.-]*
   "Alias:"              return token::ALIAS;
   "Acceptance:"         return token::ACCEPTANCE;
   "acc-name:"           return token::ACCNAME;
+  "controllable-AP:"    return token::CONTROLLABLE_AP;
   "tool:"               return token::TOOL;
   "name:"               return token::NAME;
   "properties:"         return token::PROPERTIES;
