@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2014-2018, 2020-2021 Laboratoire de Recherche et
+# Copyright (C) 2014-2018, 2020-2022 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -165,6 +165,7 @@ HOA: v1
 AP: 1 "a"
 States: 0
 AP: 2 "a" "b"
+controllable-AP: 3 2
 Acceptance: 0 t
 --BODY--
 --END--
@@ -184,7 +185,11 @@ EOF
 expecterr input <<EOF
 input:4.1-3: ignoring this redeclaration of APs...
 input:2.1-5: ... previously declared here.
-input:14.15-17: unknown acceptance 'Foo', expected Fin or Inf
+input:5.18: controllable AP number is larger than the number of APs...
+input:2.1-5: ... declared here.
+input:5.20: controllable AP number is larger than the number of APs...
+input:2.1-5: ... declared here.
+input:15.15-17: unknown acceptance 'Foo', expected Fin or Inf
 EOF
 
 cat >input <<EOF
@@ -528,6 +533,7 @@ cat >input <<EOF
   Acceptance: 2 (Inf(0) & Inf(1))
   Alias: @a 0
   Alias: @bc 1 & 2
+  controllable-AP: 2
   --BODY--
   State: 0
   [!@a & !@bc] 0
@@ -564,8 +570,9 @@ input:11.17-25: ... declaration of state-based acceptance.
 input:16.12-14: unknown alias @bc
 input:17.11-13: unknown alias @bc
 input:26.18: atomic proposition used in Alias without AP declaration
-input:40.16: AP number is larger than the number of APs...
-input:41.1-3: ... declared here
+input:27.3-18: controllable-AP without AP declaration
+input:41.16: AP number is larger than the number of APs...
+input:42.1-3: ... declared here
 EOF
 
 cat >input <<EOF
