@@ -63,6 +63,7 @@
       "acc-name: all\n",
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[!0&!1] 1\n",
@@ -101,6 +102,7 @@
       "acc-name: all\n",
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[!0&!1] 1\n",
@@ -140,6 +142,7 @@
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
       "spot-state-player: 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[!0&!1] 7\n",
@@ -206,6 +209,7 @@
       "acc-name: all\n",
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[0&1&!2] 1\n",
@@ -225,6 +229,7 @@
       "acc-name: all\n",
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[0&1&!2] 1\n",
@@ -245,6 +250,7 @@
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
       "spot-state-player: 0 0 1 1 1 1\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[0&1] 2\n",
@@ -273,6 +279,7 @@
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
       "spot-state-player: 0 0 1 1 1 1\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[0] 2\n",
@@ -296,6 +303,7 @@
       "acc-name: all\n",
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[0&2] 0\n",
@@ -312,6 +320,7 @@
       "Acceptance: 0 t\n",
       "properties: trans-labels explicit-labels state-acc deterministic\n",
       "spot-state-player: 0 0 1 1 1 1\n",
+      "controllable-AP: 2\n",
       "--BODY--\n",
       "State: 0\n",
       "[0] 2\n",
