@@ -972,6 +972,7 @@
       "properties: trans-labels explicit-labels trans-acc colored complete\n",
       "properties: deterministic\n",
       "spot-state-player: 0 0 0 0 0 1 1 1 1 1 1 1\n",
+      "controllable-AP: 0\n",
       "--BODY--\n",
       "State: 0\n",
       "[!1] 5 {1}\n",
